codegen_cranelift/src/snapshots/vicis_codegen_cranelift__function__test__compile_func.snap
---
source: codegen_cranelift/src/function.rs
assertion_line: 126
expression: clif_ctx.func.display(None)

---
function u0:0() -> i32 fast {
block0:
    v0 = iconst.i32 42
    return v0
}

