codegen_cranelift/src/snapshots/vicis_codegen_cranelift__function__test__compile_func2.snap
---
source: codegen_cranelift/src/function.rs
assertion_line: 107
expression: f.display()

---
function u0:0(i32) -> i32 fast {
block0(v0: i32):
    return v0
}

