codegen_cranelift/src/snapshots/vicis_codegen_cranelift__function__test__compile_func4.snap
---
source: codegen_cranelift/src/function.rs
assertion_line: 135
expression: f.display()

---
function u0:0() -> i32 fast {
    ss0 = explicit_slot 4

block0:
    v0 = stack_load.i32 ss0
    return v0
}

