codegen_cranelift/src/snapshots/vicis_codegen_cranelift__function__test__compile_func5.snap
---
source: codegen_cranelift/src/function.rs
assertion_line: 156
expression: f.display()

---
function u0:0(i32) -> i32 fast {
block0(v0: i32):
    v1 = iconst.i32 1
    v2 = iadd v0, v1
    jump block1

block1:
    return v2
}

